log
Thu Mar 26 06:56:10 PM UTC 2026: 
 tests:  0|6
total_score: 0/60
270ec92
Thu Mar 26 07:10:43 PM UTC 2026: 
 list.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:96:14: error: ‘List’ {aka ‘struct List’} has no member named ‘prev’
   96 |         list -> prev = list -> next;
      |              ^~
list.c:96:29: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   96 |         list -> prev = list -> next;
      |                             ^~
list.c:97:32: error: ‘List’ {aka ‘struct List’} has no member named ‘prev’
   97 |         list -> current = list -> prev;
      |                                ^~
55dc60b
Thu Mar 26 07:13:08 PM UTC 2026: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/60
c671383
Thu Mar 26 07:15:46 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/60
5b71696
Thu Mar 26 07:19:50 PM UTC 2026: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/60
74b8682
Thu Mar 26 07:24:11 PM UTC 2026: 
 list.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:99:29: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   99 |         list -> head = list -> next;
      |                             ^~
8c4b739
Thu Mar 26 07:24:40 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/60
5daf0ae
Thu Mar 26 07:29:27 PM UTC 2026: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:106:8: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
  106 |     if(list -> current = list -> tail){
      |        ^~~~
cc1: all warnings being treated as errors
1496dd8
Thu Mar 26 07:30:04 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/60
9f20fd4
Thu Mar 26 07:32:03 PM UTC 2026: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/60
ac3d1bd
Thu Mar 26 07:36:17 PM UTC 2026: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|6
total_score: 0/60
bedebb9
Thu Mar 26 07:49:34 PM UTC 2026: 
 list.c | 21 +++++++++++++++------
 1 file changed, 15 insertions(+), 6 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:100:13: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
  100 |     if(list -> next == NULL){
      |             ^~
list.c:107:13: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
  107 |     if(list -> next == list -> current){
      |             ^~
7430fec
Thu Mar 26 07:49:58 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:100:13: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
  100 |     if(list -> next == NULL){
      |             ^~
1ca5089
Thu Mar 26 07:50:13 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/60
fb9bfc4
Thu Mar 26 07:59:39 PM UTC 2026: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/60
1ed06c1
Thu Mar 26 08:00:07 PM UTC 2026: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:110:9: error: ‘head’ undeclared (first use in this function)
  110 |         head -> prev = NULL;
      |         ^~~~
list.c:110:9: note: each undeclared identifier is reported only once for each function it appears in
4a12124
Thu Mar 26 08:00:19 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/60
4e40799
Thu Mar 26 08:02:41 PM UTC 2026: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:110:9: error: expected ‘,’ or ‘;’ before ‘list’
  110 |         list -> current = list -> head;
      |         ^~~~
bd26507
Thu Mar 26 08:02:51 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/60
b1986ac
Thu Mar 26 08:03:11 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/60
d08aefe
Thu Mar 26 08:03:40 PM UTC 2026: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|6
total_score: 0/60
5dac17e
Thu Mar 26 08:05:14 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:109:44: error: expected ‘;’ before ‘list’
  109 |         list -> head = list -> head -> next
      |                                            ^
      |                                            ;
  110 |         list -> head -> next = aux;
      |         ~~~~                                
list.c:108:15: error: unused variable ‘aux’ [-Werror=unused-variable]
  108 |         Node* aux = list -> head -> next -> next;
      |               ^~~
cc1: all warnings being treated as errors
e855944
Thu Mar 26 08:05:22 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/60
9af8c76
